<resources>
    <string name="app_name">易厨生鲜分拣系统</string>

    <!-- 登录页面-->
    <string name="login_name">生鲜电商生产执行系统</string>
    <string name="login_user_number">员工编号</string>
    <string name="login_user_password">登录密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_passwor">忘记密码?</string>
    <string name="login">登录</string>
    <string name="login_input_user_num">请输入员工编号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_work_line">生&#160;产&#160;线</string>
    <string name="out_app">再按一次退出程序</string>

    <!-- 菜单页面-->
    <string name="menu_title">生鲜电商生产执行</string>
    <string name="menu_button_gongdan">生产计划和工单</string>
    <string name="menu_button_dingdan">客户订单跟踪</string>
    <string name="menu_button_basedata">基础数据</string>
    <string name="menu_button_error">生产异常</string>

    <!-- 生产计划工单-->
    <string name="plan_title">生产电商生产执行</string>
    <string name="plan_sorting">分拣单</string>
    <string name="plan_production">生产计划单</string>
    <string name="plan_acceptance">验收单</string>

    <!-- 生产计划 标题-->
    <string name="production_list_level">级别</string>
    <string name="production_list_sheet_number">计划单号</string>
    <string name="production_list_product_number">产品编号</string>
    <string name="production_list_product_name">产品名称</string>
    <string name="production_list_start_time">开始时间</string>
    <string name="production_list_end_time">计划完成日期</string>
    <string name="production_list_plan_count">计划数量</string>
    <string name="production_list_person">责任人</string>

    <!-- 分拣单 标题-->
    <string name="sorting_list_sale_number">销售单号</string>
    <string name="sorting_list_batch">批次</string>
    <string name="sorting_list_serial">流水线</string>
    <string name="sorting_list_position">坑位</string>
    <string name="sorting_list_status">状态</string>
    <string name="sorting_list_operation">操作</string>
    <string name="sorting_order_info">分拣单详情</string>
    <string name="sorting_over">分拣完成</string>
    <string name="sorting_single">单品</string>
    <string name="sorting_group">套装菜</string>

    <string name="format_sorting_sale_number">销售单号：%1$s</string>
    <string name="format_sorting_customer">客户ID：%1$s</string>
    <string name="format_sorting_batch">批次：%1$s</string>
    <string name="format_sorting_serial">流水线：%1$s</string>
    <string name="format_sorting_position">坑位：%1$s</string>

    <string name="format_sorting_item_code">商品编号：%1$s</string>
    <string name="format_sorting_item_name">商品名称：%1$s</string>
    <string name="format_sorting_item_count">数量：%1$s</string>
    <string name="format_sorting_item_unit">单位：%1$s</string>
    <string name="format_sorting_item_type">类型：%1$s</string>
    <string name="format_sorting_item_handling">加工单号：%1$s</string>

    <string name="format_acceptance_accptance_code">验收单号：%1$s</string>
    <string name="format_acceptance_path">路径:%1$s</string>
    <string name="format_acceptance_order_time">单据时间：%1$s</string>
    <string name="format_acceptance_total">合计:%1$s</string>
    <string name="format_acceptance_item_single_title">单品数x%1$s</string>
    <string name="format_acceptance_item_group_title">套装菜x%1$s</string>
    <string name="format_acceptance_pitposition">坑位:%1$s</string>


    <!-- 验收单 标题-->
    <!--<string name="acceptance_list_sale_number">销售单号</string>-->
    <string name="acceptance_list_path">路径</string>
    <string name="acceptance_list_customer">客户ID</string>
    <string name="acceptance_list_batch">批号</string>
    <string name="acceptance_list_time">单据时间</string>
    <string name="acceptance_list_count">合计数量</string>
    <!--<string name="acceptance_list_status">状态</string>-->
    <!--<string name="acceptance_list_operation">操作</string>-->
    <string name="acceptance_pass">通&#160;&#160;过</string>
    <string name="acceptance_error">异&#160;&#160;常</string>
    <string name="acceptance_order_info">验收单详情</string>

    <string name="acceptance_item_name">商品名称</string>
    <string name="acceptance_item_code">商品编码</string>
    <string name="acceptance_item_count">数量</string>
    <string name="acceptance_item_unit">单位</string>
    <string name="acceptance_item_group_name">套装菜名称</string>
    <string name="acceptance_item_handling">加工单号</string>
    <string name="acceptance_item_type">类型</string>
    <string name="acceptance_item_prostandard">规格</string>

    <string name="toast_updating">正在提交数据...</string>
    <string name="toast_loading">正在加载数据...</string>
    <string name="toast_logining">正在登陆...</string>
    <string name="toast_db_connect_error">数据库连接失败，请检查网络！</string>
    <string name="toast_noting_data">没有更多数据了!</string>
    <string name="toast_get_userinfo_error">员工信息获取失败！</string>
    <string name="toast_get_userinfo_role_error">该员工没有分配用户角色！</string>
    <string name="toast_login_error">登录失败！请检查用户名和密码，网络是否正常</string>
    <string name="toast_load_data_error">获取数据失败</string>
    <string name="toast_commit_success" >提交成功!</string>
    <string name="toast_commit_error" >提交失败!</string>
    <string name="toast_net_connect" >网络连接失败!</string>
    <string name="toast_json_error" >json数据不正确</string>

    <string name="pullToRefresh_push_label">上拉加载...</string>
    <string name="pullToRefresh_push_loading">正在加载...</string>

    <string name="dictionary_acceptance_status_wait_acceptance">等待验收</string>
    <string name="dictionary_acceptance_status_wait_sorting">等待分拣</string>
    <string name="dictionary_acceptance_status_sorting_over">分拣完成</string>
    <string name="dictionary_acceptance_status_pass">验收通过</string>
    <string name="dictionary_acceptance_status_no_pass">验收未通过</string>

    <string name="details">详情</string>
    <string name="last_one">上一个</string>
    <string name="next">下一个</string>
</resources>
