<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <TextView
            android:text="@string/sorting_list_sale_number"
            android:textColor="@color/color_default_red"
            style="@style/sorting_list_title_text_style" />
        <TextView
            android:text="@string/sorting_list_batch"
            style="@style/sorting_list_title_text_style" />
        <TextView
            android:text="@string/sorting_list_serial"
            style="@style/sorting_list_title_text_style" />
        <TextView
            android:text="@string/sorting_list_position"
            style="@style/sorting_list_title_text_style" />
        <TextView
            android:text="@string/sorting_list_status"
            style="@style/sorting_list_title_text_style" />
        <TextView
            android:text="@string/sorting_list_operation"
            style="@style/sorting_list_title_text_style" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_default_line"/>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/plan_activity_fragment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/color_default_line"
        android:dividerHeight="1px"
        ptr:ptrMode="pullFromEnd"
        >

    </com.handmark.pulltorefresh.library.PullToRefreshListView>
</LinearLayout>