<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
   >
    <include layout="@layout/title_layout"/>
    <GridLayout
        android:paddingTop="60dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">

        <Button
            android:drawableTop="@mipmap/menu_gongdan_icon"
            android:text="@string/menu_button_gongdan"
            style="@style/menu_activity_button_style"/>

        <Button
            android:enabled="false"
            android:drawableTop="@mipmap/menu_dingdan_icon"
            android:text="@string/menu_button_dingdan"
            style="@style/menu_activity_button_style"/>

        <Button
            android:enabled="false"
            android:text="@string/menu_button_basedata"
            android:drawableTop="@mipmap/menu_jichushuju_icon"
            style="@style/menu_activity_button_style"
           />

        <Button
            android:enabled="false"
            android:drawableTop="@mipmap/menu_error_icon"
            android:text="@string/menu_button_error"
            style="@style/menu_activity_button_style"/>
    </GridLayout>
</FrameLayout>