<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_default_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_gray_bg_blue"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/sorting_info_code"
            style="@style/sorting_info_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_customer"
            style="@style/sorting_info_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_patch"
            style="@style/sorting_info_title_text_style"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sorting_info_serial"
            style="@style/sorting_info_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_position"
            style="@style/sorting_info_title_text_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_default_line"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:text="@string/acceptance_item_name" />

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:text="@string/acceptance_item_code" />

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:layout_weight="0.5"
            android:text="@string/acceptance_item_count" />

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:layout_weight="0.5"
            android:text="@string/acceptance_item_unit" />

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:layout_weight="0.5"
            android:text="@string/acceptance_item_prostandard" />

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:layout_weight="0.5"
            android:text="@string/acceptance_item_type" />

        <TextView
            style="@style/sorting_info_title2_text_style"
            android:text="@string/acceptance_item_handling"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/sorting_info_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_default_line"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <ImageView
            android:focusable="false"
            android:layout_gravity="center"
            android:id="@+id/sorting_info_pitposition_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <!--<ImageView-->
            <!--android:id="@+id/sorting_info_button_last"-->
            <!--android:layout_width="55dp"-->
            <!--android:layout_height="55dp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_margin="3dp"-->
            <!--android:background="@mipmap/last_item_icon" />-->

        <!--<ImageView-->
            <!--android:id="@+id/sorting_info_button_next"-->
            <!--android:layout_width="55dp"-->
            <!--android:layout_height="55dp"-->
            <!--android:layout_gravity="center_vertical|right"-->
            <!--android:layout_margin="3dp"-->
            <!--android:background="@mipmap/next_item_icon" />-->
        <ImageView
            android:id="@+id/sorting_info_laber_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@mipmap/laber_accepetance_pass"
            android:visibility="gone" />
    </FrameLayout>


    <Button
        android:id="@+id/sorting_info_button_check"
        style="@style/red_frame_button_style"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/sorting_over" />
</LinearLayout>