<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_default_white"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_gray_bg_blue"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/sorting_info_code"
            style="@style/sorting_list_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_customer"
            style="@style/sorting_list_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_patch"
            style="@style/sorting_list_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_serial"
            style="@style/sorting_list_title_text_style" />

        <TextView
            android:id="@+id/sorting_info_position"
            style="@style/sorting_list_title_text_style" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/sorting_info_list"
            android:orientation="vertical"
            android:background="@color/color_default_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sorting_info_button_last"
            style="@style/red_frame_button_style"
            android:text="@string/last_one" />

        <Button
            android:id="@+id/sorting_info_button_check"
            style="@style/red_frame_button_style"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/sorting_over" />

        <Button
            android:id="@+id/sorting_info_button_next"
            style="@style/red_frame_button_style"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>